@@ -41,17 +41,11 @@
 
 	<properties>
 		<component.name>Graph Editor</component.name>
-		<manifest.bundle.version>1.3.1-${maven.build.timestamp}</manifest.bundle.version>
+		<manifest.bundle.version>${revision}-${maven.build.timestamp}</manifest.bundle.version>
 		<maven.build.timestamp.format>yyyymmddhhmm</maven.build.timestamp.format>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<compiler.version>1.8</compiler.version>
-		<maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-		<maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
-		<maven.bundle.plugin.version>2.4.0</maven.bundle.plugin.version>
-		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
+        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 		<maven.dependency.plugin.version>2.8</maven.dependency.plugin.version>
-		<maven.source.plugin.version>2.0.4</maven.source.plugin.version>
-		<maven.javadoc.plugin.version>2.3</maven.javadoc.plugin.version>
 		<org.eclipse.emf.ecore.version>2.9.2-v20131212-0545</org.eclipse.emf.ecore.version>
 		<org.eclipse.emf.common.version>2.9.2-v20131212-0545</org.eclipse.emf.common.version>
 		<org.eclipse.emf.ecore.xmi.version>2.9.1-v20131212-0545</org.eclipse.emf.ecore.xmi.version>
@@ -60,6 +54,8 @@
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.9.5</mockito.version>
 		<org.slf4j.version>1.7.5</org.slf4j.version>
+		<org.openjfx.version>11</org.openjfx.version>
+		<openjfx-monocle.version>jdk-11+26</openjfx-monocle.version>
 		<ch.qos.logback.version>1.0.13</ch.qos.logback.version>
 	</properties>
 
@@ -70,49 +66,13 @@
 		<module>model</module>
 	</modules>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<profiles>
-		<profile>
-			<id>release</id>
-			<activation>
-				<property>
-					<name>signArtifacts</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.felix</groupId>
 					<artifactId>maven-bundle-plugin</artifactId>
-					<version>${maven.bundle.plugin.version}</version>
+					<version>4.0.0</version>
 					<extensions>true</extensions>
 					<configuration>
 						<instructions>
@@ -135,18 +95,27 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${maven.compiler.plugin.version}</version>
-					<configuration>
-						<source>${compiler.version}</source>
-						<target>${compiler.version}</target>
-					</configuration>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-compiler-plugin</artifactId>
+				    <version>3.8.0</version>
+				    <configuration>
+				        <release>11</release>
+				    </configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>${maven.surefire.plugin.version}</version>
+					<version>2.22.0</version>
+					<configuration>
+					   <argLine>--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens graph.editor.api/de.tesis.dynaware.grapheditor.utils=ALL-UNNAMED -Dprism.order=sw -Dglass.platform=Monocle -Dmonocle.platform=Headless</argLine>
+					</configuration>
+					<dependencies>
+				        <dependency>
+				            <groupId>org.ow2.asm</groupId>
+				            <artifactId>asm</artifactId>
+				            <version>6.2</version>
+				        </dependency>
+				    </dependencies>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -154,7 +123,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>${maven.source.plugin.version}</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -163,34 +132,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven.javadoc.plugin.version}</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<additionalparam>-Xdoclint:none</additionalparam>
-					<quiet>true</quiet>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.3</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
